# music_album

./: .dockerignore  .env.local  .env.sample  .gitignore  Dockerfile  README.md  albums.json  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
albums/: admin.py  models.py
albums/management/commands/: import.py
albums/migrations/: 0001_initial.py
api/: filters.py  serializers.py  urls.py  views.py
api/tests/: conftest.py  test_urls.py  test_views.py
music_album/: settings.py  urls.py
users/: admin.py  models.py
users/migrations/: 0001_initial.py
