[project]
name = "musik-album"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django==4.2.23",
    "django-filter>=25.1",
    "djangorestframework>=3.16.1",
    "drf-spectacular>=0.28.0",
    "uuid-utils>=0.11.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
]
