[project]
name = "musik-album"
version = "0.1.0"
description = "Albums and tracks catalog"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django==4.2.23",
    "django-filter>=25.1",
    "djangorestframework>=3.16.1",
    "drf-spectacular>=0.28.0",
    "gunicorn>=23.0.0",
    "python-dotenv>=1.1.1",
    "uuid-utils>=0.11.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pytest-django>=4.11.1",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "music_album.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
